tests/typing/good/testfile-bounds-11.scala

class D { def foo[A>:Any](a: Any) : A = a }
object Main { def main(args: Array[String]) { } }
