tests/typing/bad/testfile-variance-2.scala

class T[-A](a:A) { def m():A = a  }
object Main { def main(args: Array[String]) { } }
